# AmosChat

./: README.md  build.sh
source/: Makefile
source/client/: CMakeLists.txt  clientMain.cpp
source/client/inc/: client.h
source/client/src/: CMakeLists.txt  client.cpp  clientMain.cpp
source/common/: common.h
source/output/: clientMain  serverMain
source/server/: CMakeLists.txt  serverMain.cpp
source/server/inc/: server.h
source/server/src/: CMakeLists.txt  server.cpp  serverMain.cpp
